--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #4a6fa5;
     --secondary-color: #166088;
-    --accent-color: #4fc3a1;
+    --accent-color: #a102af;
     --background-color: #f5f7fa;
     --text-color: #333;
     --light-gray: #f0f2f5;
