prompt update for agent memorize

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #4a6fa5;
-    --secondary-color: #166088;
+    --primary-color: #a102af;
+    --secondary-color: rgb(191, 32, 223);
     --accent-color: #a102af;
     --background-color: #f5f7fa;
     --text-color: #333;
