update condition filter messages  and update to timezome gmt+7

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: #a102af;
+    --primary-color: #c019cf;
     --secondary-color: rgb(191, 32, 223);
-    --accent-color: #a102af;
+    --accent-color: #c019cf;
     --background-color: #f5f7fa;
     --text-color: #333;
     --light-gray: #f0f2f5;
